--- a/404.html
+++ b/404.html
@@ -248,7 +248,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/english.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/english.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>English</div>
@@ -257,7 +257,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/german.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/german.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Deutsch</div>
@@ -266,7 +266,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/french.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/french.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Français</div>
@@ -275,7 +275,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/armenian.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/armenian.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>
@@ -289,7 +289,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/azerbaijani.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/azerbaijani.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Azərbaycan</div>
@@ -298,7 +298,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/turkish.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/turkish.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Türkçe</div>
@@ -307,7 +307,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/persian.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/persian.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>
@@ -318,7 +318,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/arabic.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/arabic.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>
@@ -332,7 +332,7 @@
                                             <button id="openDialog1" class="button-secondary is-nav w-inline-block">
                                                 <span>
                                                     <div class="button-icon w-embed">
-                                                        <img src="gallery/icons/language-dark-500.svg" alt="Girl in a jacket">
+                                                        <img src="https://www.savingurmialake.ir/gallery/icons/language-dark-500.svg" alt="Girl in a jacket">
                                                     </div>
                                                 </span>
                                                 <div>Language</div>
@@ -588,7 +588,7 @@
             class="button-tertiary with-icon w-inline-block">
         <span>
         <div class="button-icon w-embed">
-        <img src="gallery/icons/gmail-light-500.svg" alt="Girl in a jacket">
+        <img src="https://www.savingurmialake.ir/gallery/icons/gmail-light-500.svg" alt="Girl in a jacket">
         </div>
         </span>
         <div>Email</div>
@@ -597,7 +597,7 @@
             class="button-tertiary with-icon w-inline-block">
         <span>
         <div class="button-icon w-embed">
-        <img src="gallery/icons/linkedin-light-500.svg" alt="Girl in a jacket">
+        <img src="https://www.savingurmialake.ir/gallery/icons/linkedin-light-500.svg" alt="Girl in a jacket">
         </div>
         </span>
         <div>LinkedIn</div>
@@ -606,7 +606,7 @@
             class="button-tertiary with-icon w-inline-block">
         <span>
         <div class="button-icon w-embed">
-        <img src="gallery/icons/github-light-500.svg" alt="Girl in a jacket">
+        <img src="https://www.savingurmialake.ir/gallery/icons/github-light-500.svg" alt="Girl in a jacket">
         </div>
         </span>
         <div>Github</div>
@@ -618,7 +618,7 @@
             class="button-tertiary with-icon w-inline-block">
         <span>
         <div class="button-icon w-embed">
-        <img src="gallery/icons/youtube-light-500.svg" alt="Girl in a jacket">
+        <img src="https://www.savingurmialake.ir/gallery/icons/youtube-light-500.svg" alt="Girl in a jacket">
         </div>
         </span>
         <div>Youtube</div>
@@ -627,7 +627,7 @@
             class="button-tertiary with-icon w-inline-block">
         <span>
         <div class="button-icon w-embed">
-        <img src="gallery/icons/discord-light-500.svg" alt="Girl in a jacket">
+        <img src="https://www.savingurmialake.ir/gallery/icons/discord-light-500.svg" alt="Girl in a jacket">
         </div>
         </span>
         <div>Dsicord</div>
@@ -636,7 +636,7 @@
             class="button-tertiary with-icon w-inline-block">
         <span>
         <div class="button-icon w-embed">
-        <img src="gallery/icons/twitterx-light-500.svg" alt="Girl in a jacket">
+        <img src="https://www.savingurmialake.ir/gallery/icons/twitterx-light-500.svg" alt="Girl in a jacket">
         </div>
         </span>
         <div>X</div>
@@ -660,7 +660,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/english.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/english.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>English</div>
@@ -669,7 +669,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/german.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/german.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Deutsch</div>
@@ -678,7 +678,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/french.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/french.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Français</div>
@@ -687,7 +687,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/armenian.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/armenian.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>
@@ -701,7 +701,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/azerbaijani.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/azerbaijani.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Azərbaycan</div>
@@ -710,7 +710,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/turkish.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/turkish.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>Türkçe</div>
@@ -719,7 +719,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/persian.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/persian.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>
@@ -730,7 +730,7 @@
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
-                                                                        <img src="gallery/icons/arabic.svg" alt="Girl in a jacket">
+                                                                        <img src="https://www.savingurmialake.ir/gallery/icons/arabic.svg" alt="Girl in a jacket">
                                                                     </div>
                                                                 </span>
                                                                 <div>
@@ -743,7 +743,7 @@
                                             </dialog>
         <button id="openDialog2" class="button-tertiary with-icon is-small w-inline-block"><span>
         <div class="button-icon w-embed">
-        <img src="gallery/icons/language-light-500.svg" alt="Girl in a jacket">
+        <img src="https://www.savingurmialake.ir/gallery/icons/language-light-500.svg" alt="Girl in a jacket">
         </div>
         </span>
         <div>Language</div></button>
