--- a/404.html
+++ b/404.html
@@ -7,18 +7,18 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&display=swap" rel="stylesheet">
 		<link href="https://www.savingurmialake.ir/63f3c01633332172e2cb2497/css/kernel-copy.66744a037.min.css" rel="stylesheet" type="text/css" />
-		<link href="gallery/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
-		<link href="gallery/images/webclip.png" rel="apple-touch-icon" />
+		<link href="https://www.savingurmialake.ir/gallery/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
+		<link href="https://www.savingurmialake.ir/gallery/images/webclip.png" rel="apple-touch-icon" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="Dedicated to Saving Urmia Lake" name="description" />
 		<meta content="website" property="og:type" />
 		<meta content="https://www.savingurmialake.ir/404" property="og:url" />
 		<meta content="404 · Saving Urmia Lake" property="og:title" />
 		<meta content="Dedicated to Saving Urmia Lake" property="og:description" />
-		<meta content="gallery/images/opengraph.png" property="og:image" />
+		<meta content="https://www.savingurmialake.ir/gallery/images/opengraph.png" property="og:image" />
 		<meta content="404 · Saving Urmia Lake" property="twitter:title" />
 		<meta content="Dedicated to Saving Urmia Lake" property="twitter:description" />
-		<meta content="gallery/images/opengraph.png" property="twitter:image" />
+		<meta content="https://www.savingurmialake.ir/gallery/images/opengraph.png" property="twitter:image" />
 		<meta content="summary_large_image" name="twitter:card" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<script
