--- a/az.html
+++ b/az.html
@@ -1093,7 +1093,7 @@
                       <div class="button-outline social">
                         <div class="social-icon w-embed"><a class="social-icon"
                             href="https://twitter.com/intent/tweet?text=Ana səhifə on @savingurmialake https://www.savingurmialake.ir/az" target="_blank">
-<svg role="img" fill='currentColor' viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><title>Teilen Sie diese Seite auf X</title><g fill="#113a2d" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M11,4c-3.866,0 -7,3.134 -7,7v28c0,3.866 3.134,7 7,7h28c3.866,0 7,-3.134 7,-7v-28c0,-3.866 -3.134,-7 -7,-7zM13.08594,13h7.9375l5.63672,8.00977l6.83984,-8.00977h2.5l-8.21094,9.61328l10.125,14.38672h-7.93555l-6.54102,-9.29297l-7.9375,9.29297h-2.5l9.30859,-10.89648zM16.91406,15l14.10742,20h3.06445l-14.10742,-20z"></path></g></g></svg>
+<svg role="img" fill='currentColor' viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><title>Bu səhifəni X-də paylaşın</title><g fill="#113a2d" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M11,4c-3.866,0 -7,3.134 -7,7v28c0,3.866 3.134,7 7,7h28c3.866,0 7,-3.134 7,-7v-28c0,-3.866 -3.134,-7 -7,-7zM13.08594,13h7.9375l5.63672,8.00977l6.83984,-8.00977h2.5l-8.21094,9.61328l10.125,14.38672h-7.93555l-6.54102,-9.29297l-7.9375,9.29297h-2.5l9.30859,-10.89648zM16.91406,15l14.10742,20h3.06445l-14.10742,-20z"></path></g></g></svg>
                             </svg></a></div>
                       </div>
                     </div>
@@ -1103,7 +1103,7 @@
                         <div class="social-icon w-embed"><a class="social-icon"
                             href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.savingurmialake.ir/az&title=Ana səhifə " target="_blank">
 
-<svg role="img" fill='currentColor' viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><title>Teilen Sie diese Seite auf LinkedIn</title><g fill="#113a2d" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M41,4h-32c-2.76,0 -5,2.24 -5,5v32c0,2.76 2.24,5 5,5h32c2.76,0 5,-2.24 5,-5v-32c0,-2.76 -2.24,-5 -5,-5zM17,20v19h-6v-19zM11,14.47c0,-1.4 1.2,-2.47 3,-2.47c1.8,0 2.93,1.07 3,2.47c0,1.4 -1.12,2.53 -3,2.53c-1.8,0 -3,-1.13 -3,-2.53zM39,39h-6c0,0 0,-9.26 0,-10c0,-2 -1,-4 -3.5,-4.04h-0.08c-2.42,0 -3.42,2.06 -3.42,4.04c0,0.91 0,10 0,10h-6v-19h6v2.56c0,0 1.93,-2.56 5.81,-2.56c3.97,0 7.19,2.73 7.19,8.26z"></path></g></g></svg>
+<svg role="img" fill='currentColor' viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><title>Bu səhifəni LinkedIn-də paylaşın</title><g fill="#113a2d" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M41,4h-32c-2.76,0 -5,2.24 -5,5v32c0,2.76 2.24,5 5,5h32c2.76,0 5,-2.24 5,-5v-32c0,-2.76 -2.24,-5 -5,-5zM17,20v19h-6v-19zM11,14.47c0,-1.4 1.2,-2.47 3,-2.47c1.8,0 2.93,1.07 3,2.47c0,1.4 -1.12,2.53 -3,2.53c-1.8,0 -3,-1.13 -3,-2.53zM39,39h-6c0,0 0,-9.26 0,-10c0,-2 -1,-4 -3.5,-4.04h-0.08c-2.42,0 -3.42,2.06 -3.42,4.04c0,0.91 0,10 0,10h-6v-19h6v2.56c0,0 1.93,-2.56 5.81,-2.56c3.97,0 7.19,2.73 7.19,8.26z"></path></g></g></svg>
 </a></div>
                       </div>
                     </div>
@@ -1210,7 +1210,7 @@
         <div data-w-id="2dfe2bd4-4052-dc6c-d822-e468effa0b88" class="padding-vertical padding-xxlarge">
         <div class="footer_layout-top">
         <div id="w-node-a7bd8d78-2670-7437-823c-efc92f42f049-2f42f044" class="logo"><a
-            aria-label="home" href="	az" aria-current="page"
+            aria-label="home" href="az" aria-current="page"
             class="logo-link w-inline-block w--current">
         <div class="nav-old-logo w-embed">
         <svg xmlns="http://www.w3.org/2000/svg"
