--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                                         class="languagelinks">
                                                         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b852-2f42f044"
                                                             class="footer-links-column">
-                                                            <a href="https://www.savingumirlake.ir"
+                                                            <a href="index"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -242,7 +242,7 @@
                                                                 </span>
                                                                 <div>English</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-de"
+                                                            <a href="de"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -251,7 +251,7 @@
                                                                 </span>
                                                                 <div>Deutsch</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-fr"
+                                                            <a href="fr"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -274,7 +274,7 @@
                                                         </div>
                                                         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b852-2f42f044"
                                                             class="footer-links-column">
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-az"
+                                                            <a href="az"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -283,7 +283,7 @@
                                                                 </span>
                                                                 <div>Azərbaycan</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-tr"
+                                                            <a href="tr"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1367,7 +1367,7 @@
                                                         class="languagelinks">
                                                         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b852-2f42f044"
                                                             class="footer-links-column">
-                                                            <a href="https://www.savingumirlake.ir"
+                                                            <a href="index"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1376,7 +1376,7 @@
                                                                 </span>
                                                                 <div>English</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-de"
+                                                            <a href="de"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1385,7 +1385,7 @@
                                                                 </span>
                                                                 <div>Deutsch</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-fr"
+                                                            <a href="fr"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1408,7 +1408,7 @@
                                                         </div>
                                                         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b852-2f42f044"
                                                             class="footer-links-column">
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-az"
+                                                            <a href="az"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1417,7 +1417,7 @@
                                                                 </span>
                                                                 <div>Azərbaycan</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-tr"
+                                                            <a href="tr"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
