--- a/az.html
+++ b/az.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html savingurmialake-domain="savingurmialake.ir" savingurmialake-home="63f3c01633332128adcb2488" savingurmialake="63f3c01633332172e2cb2497" lang="en">
+<html savingurmialake-domain="savingurmialake.ir" savingurmialake-home="63f3c01633332128adcb2488" savingurmialake="63f3c01633332172e2cb2497" lang="az">
     <head>
         <title>Ana səhifə · Urmiya gölünün xilası</title>
         <link rel="canonical" href="https://www.savingurmialake.ir/az" />
