--- a/tr.html
+++ b/tr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html savingurmialake-domain="savingurmialake.ir" savingurmialake-home="63f3c01633332128adcb2488" savingurmialake="63f3c01633332172e2cb2497" lang="en">
+<html savingurmialake-domain="savingurmialake.ir" savingurmialake-home="63f3c01633332128adcb2488" savingurmialake="63f3c01633332172e2cb2497" lang="tr">
     <head>
         <title>Ana sayfa · Urmiye Gölü'nü Kurtarmak</title>
         <link rel="canonical" href="https://www.savingurmialake.ir/tr" />
