--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                                                 </span>
                                                                 <div>Français</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-am"
+                                                            <a href="hy"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1394,7 +1394,7 @@
                                                                 </span>
                                                                 <div>Français</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-am"
+                                                            <a href="hy"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
