--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                                                 </span>
                                                                 <div>Türkçe</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-fa"
+                                                            <a href="fa"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -303,7 +303,7 @@
                                                                     <persian>فارسی</persian>
                                                                 </div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-ar"
+                                                            <a href="ar"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1426,7 +1426,7 @@
                                                                 </span>
                                                                 <div>Türkçe</div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-fa"
+                                                            <a href="fa"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
@@ -1437,7 +1437,7 @@
                                                                     <persian>فارسی</persian>
                                                                 </div>
                                                             </a>
-                                                            <a href="https://sites.google.com/view/saving-urmia-lake-ar"
+                                                            <a href="ar"
                                                                 class="button-languagepopup with-icon w-inline-block">
                                                                 <span>
                                                                     <div class="button-icon w-embed">
