--- a/learn.html
+++ b/learn.html
@@ -432,7 +432,7 @@
                                         </div>
                                         <span>
 										<a href="learn/characteristics">
-                                            <h3>Economic & touristic characteris-<br/>tics of Urmia Lake</h3>
+                                            <h3>Economic & touristic characteristics of Urmia Lake</h3>
 											</a>
                                         </span>
                                         <div class="padding-bottom padding-custom2"></div>
