--- a/az/about.html
+++ b/az/about.html
@@ -643,21 +643,21 @@
         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b83d-2f42f044"
             class="footer-links-centre">
         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b83e-2f42f044"
-            class="footer-links-column"><a href="../hy/about"
+            class="footer-links-column"><a href="../az/about"
             class="button-tertiary w-inline-block">
         <div>Haqqında</div>
-        </a><a href="../hy/learn" class="button-tertiary w-inline-block">
+        </a><a href="../az/learn" class="button-tertiary w-inline-block">
         <div>Öyrən</div>
-        </a><a href="../hy/take-action" class="button-tertiary w-inline-block">
+        </a><a href="../az/take-action" class="button-tertiary w-inline-block">
         <div>Hərəkət edin</div>
         </a></div>
         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b848-2f42f044"
-            class="footer-links-column"><a href="../hy/students"
+            class="footer-links-column"><a href="../az/students"
             class="button-tertiary w-inline-block">
         <div>Tələbələr</div>
-        </a><a href="../hy/gallery" class="button-tertiary w-inline-block">
+        </a><a href="../az/gallery" class="button-tertiary w-inline-block">
         <div>Qalereya</div>
-        </a><a href="../hy/discussions" class="button-tertiary w-inline-block">
+        </a><a href="../az/discussions" class="button-tertiary w-inline-block">
         <div>Müzakirələr</div>
         </a></div>
         <div id="w-node-_4c332bbe-b30d-af01-9c96-63078ce8b852-2f42f044"
