--- a/fa.html
+++ b/fa.html
@@ -507,14 +507,14 @@
                     </div>
                 </div>
             </span>
-            <span>
+            <span dir="ltr">
                 <div class="section">
                     <div class="padding-vertical padding-huge">
                         <div class="page-padding">
                             <div style="opacity:0" class="container-large">
                                 <div class="align-center text-align-center">
                                     <div class="social-proof_heading-wrap-mobile">
-                                                    <p align="center" class="text-size-medium"><span
+                                                    <p dir="rtl" align="center" class="text-size-medium"><span
                                                         class='text-color-green-darker text-weight-bold'>SUL</span><span
                                                         class='text-color-grey text-weight-medium'> ·
                                                         جوامع</span>
@@ -1056,7 +1056,7 @@
 			
 			
 				  			
-			<div class="page-padding">
+			<div dir="ltr" class="page-padding">
           <div class="inset-container is-article-bottom">
             <div class="container-medium">
               <div class="padding-vertical padding-xxlarge">
